update round 4 assignment

--- a/assignments/04/web/page.html
+++ b/assignments/04/web/page.html
@@ -11,7 +11,7 @@
 
 <body>
     <script>
-        var socket = io.connect('http://{host}');
+        var socket = io.connect('http://localhost:2021');
 
         socket.on('connect', function(){
             console.log('connect success');
